--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "automise-gh",
   "version": "1.0.0",
-  "description": "",
+  "description": "Automise landing page",
   "main": "index.js",
   "directories": {
     "doc": "doc"
@@ -18,5 +18,17 @@
   "bugs": {
     "url": "https://github.com/automise/automise-gh/issues"
   },
-  "homepage": "https://github.com/automise/automise-gh#readme"
+  "homepage": "https://github.com/automise/automise-gh#readme",
+  "devDependencies": {
+    "del": "^2.2.0",
+    "gulp": "^3.9.1",
+    "gulp-autoprefixer": "^3.1.0",
+    "gulp-concat": "^2.6.0",
+    "gulp-connect": "^2.3.1",
+    "gulp-imagemin": "^2.4.0",
+    "gulp-livereload": "^3.8.1",
+    "gulp-minify-css": "^1.2.3",
+    "gulp-uglify": "^1.5.2",
+    "imagemin-jpegtran": "^4.3.2"
+  }
 }
